--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,12 @@ isort = "^5.12.0"
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.0.256"
 
+[tool.poetry.scripts]
+aps = 'aps.cli:main'
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length=120
