--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ alembic = "^1.10.2"
 anyio = "^3.6.2"
 sqlalchemy-utils = "^0.40.0"
 asyncpg = "^0.27.0"
+matplotlib = "^3.7.1"
+psycopg2 = "^2.9.6"
 
 
 [tool.poetry.group.format.dependencies]
