--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 click = "^8.1.3"
-loguru = "^0.6.0"
+loguru = "^0.7.0"
 pydantic = "^1.10.6"
 google-play-scraper = "^1.2.3"
 beautifulsoup4 = "^4.11.2"
@@ -19,18 +19,19 @@ sqlalchemy = "^2.0.7"
 alembic = "^1.10.2"
 anyio = "^3.6.2"
 sqlalchemy-utils = "^0.40.0"
-asyncpg = "^0.27.0"
+asyncpg = "^0.28.0"
 matplotlib = "^3.7.1"
 psycopg2 = "^2.9.6"
+polipy = "^0.1.4"
+python-dateutil = "^2.8.2"
 
 
 [tool.poetry.group.format.dependencies]
-black = "^23.1.0"
-isort = "^5.12.0"
+black = "^23.7.0"
 
 
 [tool.poetry.group.lint.dependencies]
-ruff = "^0.0.256"
+ruff = "^0.0.280"
 
 [tool.poetry.scripts]
 aps = 'aps.cli:main'
